--- a/HW2/style.css
+++ b/HW2/style.css
@@ -1,66 +1,91 @@
-.image {
-	width: 20%;
-}
-.image2{
-	width: 20%;
-	float: right;
-	vertical-align: top;
-	margin-right: 25px;
-}
-.image3{
-	width: 20%;
-}
-.phone{
-	position: absolute;
-	top: 40px;
-	right: 2em;
-}
-.ul{
-	margin: 0;
-	padding: 0;
-	display: flex;
-}
-.inline-block {
-	display: inline-block;
-}
-.element{
-    font-family: sans-serif;
-    color: #333333;
-    font-size: 14px;
+body{
 
+	background: #eeeeee;
+}
+.content{
+	width: 1000px;
+	margin:0 auto; 
+	border: 1px solid #d6d6d6;
+	background: white; 
 }
 .header{
-	border: 1px solid #000;
+	border: 1px solid;
+}
+.header-logo{
+	box-sizing: border-box;
+	display: inline-block;
+	width: 18.495514147688061%;
+	vertical-align: top;
+	margin-left: 33px;
+
+}
+.logo{
+	width: 170px;
+	height: 160px;
+}
+.header-links{
+	box-sizing: border-box;
+	display: inline-block;
+	width: 51.414768806073154%;
+	vertical-align: top;
+	margin-top: 50px;
+}
+.item{
+	display: inline-block;
+}
+.list{
+	list-style-type: none; 
+	text-align:center;
+}
+.header-number{
+	box-sizing: border-box;
+	display: inline-block;
+	width: 24.568668046928916%;
+	vertical-align: top;
+	text-align: center;
+	margin-top:	65px;
+}
+.clearfix::after{
+	content: "";
+	display: block;
+	clear: both;
 }
 .body{
-	margin-top: 25px;
+	margin-top: 20px;
 }
 .main{
-	border: 1px solid #000;
-	margin-top: 25px;
-	vertical-align: top;
-	display: inline-block;
-	width: 600px;
-	height: 300px;
+	border: 1px solid;
+	float: left;
+	width: 61.4906832298137%
 }
-.main2{
-	vertical-align: top;
-	border: 1px solid #000;
-	display: inline-block;
-	height: 300px;
-	width: 400px;
+.main-content{
+	margin-left: 3.657694962042788%;
+	width: 70.609385783298827%;
+	float: left;
 }
-.footer{
-	border: 1px solid #000;
-	margin-top: 100px;
-	text-align: center;
-}
-.icon{
-	margin-top: 25px;
-	font-size: 25px;
+.main-image{
+	width: 17.8743961352657%;
+	float: right;
+	margin-right: 2.277432712215321%;
 }
 .created{
 	text-align: center;
-	font-size: 25px;
-	font-family: "PT Sans", "Arial", serif;
 }
+.sidebar{
+	margin: 0px auto;
+	border: 1px solid;
+	float: right;
+	width: 32.160110420979986%;
+}
+.sidebar-content{
+	margin-right: 20.43010752688172%;
+}
+
+.footer{
+	margin-top: 20px;
+	border: 1px solid;
+}
+.footer-sites{
+	text-align: center;
+}
+
