--- a/HW3/css/style.css
+++ b/HW3/css/style.css
@@ -3,18 +3,20 @@ body{
 }
 .content{
 	/*border: 1px solid;*/
-	margin-left:132px;
-	margin-right: 136px;
-	margin-top:50px;
+	width: 756px;
+	margin: 0 auto;
 	background: #f6f6f6;
 }
 
 .header{
-	align-content: center;
+	border-bottom: 3px solid #9ec4f1;
 }
 .header-image{
 	/*border: 1px solid;*/
 	padding:0px;
+}
+.header-logo{
+	width:12.422360248447205%
 }
 .logo{
 	/*border: 1px solid;*/
@@ -26,18 +28,19 @@ body{
 .header-block{
 	margin-top: 20px;
 	/*border: 1px solid  green;*/
-	width: 994px;
+	/*width: 994px;*/
 }
 .block{
 	display: inline-block;
-	border: #f5f5f5 solid 1px ;
-	padding: 10px; 
-	margin-right: 0.2px;
-	width: 140px;
+	/*border: #f5f5f5 solid 1px ;*/
+	padding: 10px 30px;
+	box-sizing: border-box;
+	width: 16.666666666666667%; 
+	/*margin-right: 0.2px;*/
 	background: #ffffff;
 }
 .empty{
-	width: 994px;
+	/*width: 994px;*/
 	height: 3px;
 	background: #9ec4f1
 }
@@ -48,9 +51,9 @@ body{
 .body-image{
 
 }
-.image{
-	width: 994px;
-	height: 312px;
+.image{/*
+	max-width: 100%;
+	width: 100%;*/
 }
 .clearfix::after{
 	content: '';
@@ -64,15 +67,16 @@ body{
 }
 .left-block{
 	/*border: solid 1px;*/
+	box-sizing: border-box;
 	float:left;
-	width: 698px;
-	height: 356px;
+	width: 63%;
+	padding: 20px;
 	background: #ffffff;
 }
 .right-block{
 	/*border: solid 1px;*/
 	float: right;
-	width: 280px;
+	width: 36%;
 	height: 356px;
 	background: #ffffff;
 }
